# EDOF_NETZ

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf.template  railway.json  start.sh  supervisord.conf
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240627_initial_schema.py  31d805886dd9_add_attendee_pennylane_customer_id.py  4b61b5235bb1_initial_erp_schema.py  a5214eba7575_add_settings_table.py  f27bdf2ef918_add_reconciliation_fields_to_registration_.py
backend/src/edof_netz/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  tasks.py
backend/src/edof_netz/routers/: __init__.py  auth.py  dashboard.py  folders.py  invoices.py  pennylane.py  sync.py  webhooks.py
backend/src/edof_netz/services/: dashboard.py  pennylane.py  wedof.py
backend/tests/: test_pennylane_service.py  test_wedof_service.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/attendees/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/folders/certification/: page.tsx
web/src/app/folders/registration/: page.tsx
web/src/app/invoices/: page.tsx
web/src/app/invoicing/daily/: page.tsx
web/src/app/login/: page.tsx
web/src/components/: AttendeeProfileModal.tsx  Layout.tsx  Pagination.tsx  StatusBadge.tsx
web/src/lib/: api.ts  auth.tsx
